# griffe-modernized-annotations

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.cfg
.github/workflows/: publish.yml
griffe_modernized_annotations/: __init__.py  extension.py  griffe_generics  modernizer.py  predicates.py  transforms.py  traversal.py  types.py  utils.py
griffe_modernized_annotations/proposals/: __init__.py  pep.py  pep585.py  pep604.py
tests/: conftest.py  test_extension.py  utils.py
